--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.container {
+.contact-mainbox {
     font-family: 'Montserrat', sans-serif;
+    background-color: whitesmoke;
+    border-radius: 15px;
 }
 
 #contact-heading h1{
     text-align: center;
     font-weight: bold;
     font-size: 40px;
-    margin: 30px;   
+    margin-top: 30px;   
 }
 .form-fields {
     display: block;
@@ -29,17 +31,26 @@
     box-shadow: 0px 3px 15px #00000029; 
 }
 .contact-table{
-    border-radius: 15px;
     margin-top: 10px;
      margin-bottom: 10px;
      font-family: Montserrat;
      box-shadow: 0px 3px 15px #00000029; 
+     border-radius: 10px 10px 0 0;
+     overflow: hidden;
 }
+.contact-table thead tr {
+    background-color: #b21b09;
+    color: white;
+}
+.contact-table tbody tr:last-of-type {
+    border-bottom: 3px solid #b21b09;
+}
+
 .linkto {
     
     color: #b21b09;
 }
-.linkto :hover {
+.linkto:hover {
     color: #d9534f;
 }
 
