--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -1,8 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+
+.full-box {
+    background-image: url('/assets/images/3.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    background-color: darkgray;
+
+}
+
 .contact-mainbox {
     font-family: 'Montserrat', sans-serif;
-    background-color: whitesmoke;
     border-radius: 15px;
 }
 
@@ -31,7 +43,7 @@
     box-shadow: 0px 3px 15px #00000029; 
 }
 .contact-table{
-    margin-top: 10px;
+    margin-top: 50px;
      margin-bottom: 10px;
      font-family: Montserrat;
      box-shadow: 0px 3px 15px #00000029; 
@@ -48,10 +60,54 @@
 
 .linkto {
     
-    color: #b21b09;
+    color: white;
 }
 .linkto:hover {
-    color: #d9534f;
+    color: darkgrey;
+}
+.contact-table td:hover{
+    transform: translateY(-5px);
+    box-shadow: 0px 3px 10px #00000029;
+
+}
+.contact-img:hover{
+    border-radius: 10px;
+    transform: translateY(-5px);
+    box-shadow: 0px 3px 10px #00000029;
 }
 
-
+.submit-button {
+    background-color: #b21b09;
+}
+#form-inp {
+    border: none;
+    border: 1px solid white;
+    border-radius: 10px;
+}
+#form-submit {
+    background-color: #b21b09;
+    border: none;
+    border: 1px solid #b21b09;
+    border-radius: 20px;
+}
+#form-submit:hover {
+    background-color: #801408;
+}
+.table-body {
+    color: white;
+    font-weight: 500;
+}
+@media only screen and (max-width: 585px) {
+    .table-box {
+        width: 200%;
+        background-color: darkgray;
+    }
+    .form-box {
+        width: 200%;
+        background-color: darkgray;
+    }
+    .image-box {
+        width: 200%;
+        background-color: darkgray;
+    }
+}
