--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -9,22 +9,26 @@
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 10px;
+ color: white;
 }
 .head2 {
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 20px;
+    color: white;
 }
 .about-content{
     font-weight: 500;
     font-size: 18px;
     margin-top: 15px;
     margin-bottom: 15px;
+    color: floralwhite;
 }
 .card-head {
     color: white;
     font-weight: bold;
     font-size: 22px;
+    overflow: hidden;
 }
 .fact-dd {
     font-weight: 500;
@@ -49,10 +53,35 @@
     font-size: 18px;
 }
 .accord {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .fact-card:hover {
     transform: translateY(-20px);
     box-shadow: 0px 3px 15px #00000029;
+}
+.accord:hover {
+    transform: translateY(-10px);
+    box-shadow: 0px 3px 15px #00000029;
+}
+.about-fullbox {
+    background-image: url('/assets/images/4.svg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+.accord-head {
+    color: white;
+}
+.team-head {
+    color: white;
+    font-weight: bold;
+}
+#accordian-heading {
+    border: none;
+    border-radius: 15px;
+}
+.hr-line {
+    background-color: floralwhite;
 }
