--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -22,7 +22,10 @@
     font-size: 18px;
     margin-top: 15px;
     margin-bottom: 15px;
-    color: floralwhite;
+    color: lightgrey;
+}
+.about-content:hover{
+    color: white;
 }
 .card-head {
     color: white;
