--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -47,16 +47,14 @@
      margin-bottom: 10px;
      font-family: Montserrat;
      box-shadow: 0px 3px 15px #00000029; 
-     border-radius: 10px 10px 0 0;
+     border-radius: 10px 10px 10px 10px;
      overflow: hidden;
 }
 .contact-table thead tr {
     background-color: #b21b09;
     color: white;
 }
-.contact-table tbody tr:last-of-type {
-    border-bottom: 3px solid #b21b09;
-}
+
 
 .linkto {
     
