--- a/src/Components/ContactUs/ContactUs.css
+++ b/src/Components/ContactUs/ContactUs.css
@@ -2,7 +2,7 @@
 
 
 .full-box {
-    background-image: url('/assets/images/3.png');
+    background-image: url('/assets/images/contact.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
