--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -58,3 +58,10 @@
     background-color: floralwhite;
 
 }
+.connect {
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 15px;
+    margin-left: 20px;
+}
