--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -10,7 +10,7 @@
     color: lightgray;
     margin-bottom: 10px;
     font-weight: 600;
-    font-size: 15px;
+    font-size: 16px;
     text-decoration: none;
 }
 .footer-link:hover {
@@ -28,17 +28,22 @@
     font-weight: 700;
     font-size: 20px;
     margin-top: 15px;
-    margin-left: 35px;
+    text-align: center;
 }
 .fa-links {
     color: floralwhite;
     text-decoration: none;
     margin: 12px;
     margin-top: 30px;
+    transition: ease-in 600ms;
 }
 .fa-links:hover {
     color: red;
     text-decoration: none;
+    cursor: default;
+    transform: rotate(360deg);
+    transition: all 0.5s ease-in-out 0s;
+
 }
 
 .copyright {
@@ -54,6 +59,13 @@
     border: 1px solid black;
     border-radius: 15px;
 }
+.footer-map:hover {
+
+    transform: scale(1.05);
+    box-shadow: 0px 3px 15px #ffffff95;
+    transition: ease-in 500ms;
+}
+
 .hr-footer-line {
     background-color: floralwhite;
 
@@ -63,5 +75,21 @@
     font-weight: 700;
     font-size: 20px;
     margin-top: 15px;
-    margin-left: 20px;
+    text-align: center;
+}
+.address {
+    color: darkgray;
+    margin-top: 30px;
+    transition: ease-in 500ms;
+}
+.visit-us {
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 15px;
+    text-align: center;
+}
+.address:hover {
+    color: white;
+    transform: scale(1.05);
 }
