--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,273 @@
-.App {
-  text-align: center;
+
+ 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
+* {
+  padding : 0;
+  margin : 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: "Poppins", sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body::-webkit-scrollbar {
+  background: black;
+  width: 0.25rem;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+body::-webkit-scrollbar-thumb{
+  background: red;
+}
+.nav {
+  position: fixed;
+  width:100%;
+  height : 9%;
+  top : 0;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.8);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+}
+.partner {
+  background-color: rgb(255, 255, 255);
+  height:100%;
+  width: 100%;
+}
+.inner1 {
+  max-width: 35rem;
+  text-align: center;
+  color: #fff;
+  padding: 0 2rem;
+}
+.inner1:hover {
+  color:red;
+}
+@media screen and (max-width: 1024px) {
+  #basic-navbar-nav{
+    background-color: rgba(0,0,0,0.8);
+  }
+}
+
+
+
+.navbarbrand{
+  color:red;
+  font-weight: 500;
+}
+
+.main{
+  position: relative;
+  width : 100%;
+  left: 0;
+  background-color:white;
+  overflow: hidden;
+}
+
+header {
+  min-height: 100vh;
+  width : 100%;
+}
+.overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(43,51,59,0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.overlay2{
+  position: absolute;
+  width: 100%;
+  left: 0;
+  height: 100%;
+  background-color: rgba(20, 22, 24, 0.9);
+  justify-content: center;
+  align-items: center;
+}
+.clients{
+  filter : grayscale(120%);
+  transition: all ease 600ms;
+}
+
+.clients:hover {
+  filter : grayscale(0%);
+  transform: scale(1.1);
+}
+.clientimg {
+  position: absolute;
+  filter: grayscale(0.5);
+}
+.inner {
+  max-width: 35rem;
+  text-align: center;
+  color: #fff;
+  padding: 0 2rem;
+}
+.title{
+  font-size: 2.7rem;
+  font-weight: 550;
+}
+.title2 {
+  color:black;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+  font-size: 3.0rem;
+  font-weight: 550;
+}
+.title3 {
+  margin-top:5%;
+  transition : all ease 600ms;
+  color:rgb(255, 255, 255);
+  justify-content: center;
+  align-items: center;
+  font-size: 3.0rem;
+  font-weight: 550;
+}
+.title3:hover {
+  color: red;
+  cursor: pointer;
+
+}
+.rowheader {
+  text-align: right;
+  margin-top : 15%;
+  margin-bottom: 15%;
+}
+@media screen and (max-width : 480px){
+  .rowheader {
+    text-align:center;
+    margin-top : 15%;
+    margin-bottom: 15%;
+    font-weight: 400;
+  }
+  .title2 {
+    color:black;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 550;
+  }
+  .cc {
+    margin-top : 5%;
+    margin-bottom:15%;
+  }
+}
+
+
+.btn{
+  margin-top: 1rem;
+  padding: 0.7rem 1.6rem;
+  background-color:#1179e7;
+  border:none;
+  border-radius: 25px;
+  color: #fff;
+  text-transform: uppercase;
+  cursor:pointer;
+  text-decoration: none;
+  transition: all ease 1600ms;
+  transform-style: preserve-3d;
+  
+}
+.btn:hover {
+  background-color: red; 
+}
+.callback {
+  float : right;
+}
+.btn1 {
+  padding: 0.5rem 1.6rem;
+  margin-top:5%;
+  align-self : center;
+  justify-content: center;
   color: white;
+  text-transform: uppercase;
+  cursor:pointer;
+  text-decoration: none;
+  transition: all ease 1600ms;
+  transform-style: preserve-3d;
+}
+.btn1:hover {
+  background-color: red; 
+}
+.navbartog {
+  color: red;
+}
+.menu {
+  background-color: black;
+  border-radius: 25px;
+  margin-bottom: -10px;
+}
+li:hover{
+  border-bottom: 4px ridge
+}
+.inner2 {
+  max-width: 35rem;
+  text-align: center;
+  color: black;
+  padding: 0 2rem;
+}
+.small-review {
+  display: none;
+}
+.ae {
+  margin-top : 5px;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width : 480px){
+  .ae {
+    display : none;
+  }
+  .largeclients {
+    display : none;
+  }
+  .clients {
+    width : 100%;
+    height : 100%;
+    filter : grayscale(0);
+    align-self: center;
+    justify-content: center;
+  }
+  .clientimg {
+    height : 100%;
+  }
+  .carousel {
+    display: none;
+  }
+  .small-review {
+    display: inline-block;
+    background-color: rgba(0,0,0,1);
+  }
+}
+.partnerimg_small{
+  display: none;
+}
+@media screen and (max-width : 1024px){
+  .partnerimg {
+    display: none;
+  }
+  .partnerimg_small{
+    display: inline-block;
+    margin-top : 20%;
+    margin-left: 25%;
+    position:absolute;
+    justify-content: center;
+    align-content: center;
+  }
+}
+.carousel {
+  
+  background-color: rgb(0, 0, 0);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carouselcaption {
+  color:rgb(255, 255, 255);
+}
+.clientnames {
+  color : red;
 }
