--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -81,6 +81,7 @@
     color: darkgray;
     margin-top: 30px;
     transition: ease-in 500ms;
+    text-align: center;
 }
 .visit-us {
     color: white;
