--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
   margin : 0;
   box-sizing: border-box;
 }
-
+html{
+  scroll-behavior: smooth;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -135,6 +137,10 @@ header {
 }
 .rowheader {
   text-align: right;
+  margin-top : 15%;
+  margin-bottom: 15%;
+}
+.rowheader2 {
   margin-top : 15%;
   margin-bottom: 15%;
 }
