--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -2,3 +2,28 @@
     color: red;
     margin-top: 150px;
 }
+.header {
+    text-align: right;
+}
+.features{
+    text-align: center;
+}
+.foverlay{
+    color : white;
+    background-color: white;
+}
+.foverlay:hover{
+    transition: all ease-out 600ms;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius : 20px;
+    text-transform: uppercase;
+}
+@media screen and (max-width : 1024px){
+    .foverlay{
+        transition: all ease-out 600ms;
+        background-color: rgba(0, 0, 0, 0.7);
+        border-radius : 20px;
+        text-transform: uppercase;
+        color : white;
+    }
+}
