--- a/src/components/Installations/Installations.css
+++ b/src/components/Installations/Installations.css
@@ -51,3 +51,24 @@
     color: white;
     text-transform: uppercase;
 }
+.back-to-top {
+    margin-left: 90%;
+    bottom: 80px;
+    text-align: center;
+    color: black;
+    border-radius: 100%;
+    background-color: white;
+    transform: scale(2.0);
+    padding: 5px;
+    position: fixed;
+    text-decoration: none;
+    z-index: 1;
+}
+.back-to-top:hover {
+    transform: scale(2.25);
+    color: white;
+    background-color: black;
+    text-decoration: none;
+    box-shadow: 0px 1px 10px #ffffff75;
+    transition: ease 500ms;
+}
