--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -9,7 +9,7 @@
     background-size: cover;
     width: 100%;
     height: 100%;
-    background-color: darkgray;
+    background-color: rgb(126, 124, 124);
 }
 
 .contact-mainbox {
@@ -134,3 +134,17 @@
     }
     
 }
+@media only screen and (max-width: 1024px) {
+
+ .full-box {
+     background-image: none;
+ }
+ .contact-heading {
+     padding-top: 160px;
+ }
+ .contact-heading h1 {
+     font-size: 30px;
+ }
+
+}
+
