--- a/src/components/Installations/Installations.css
+++ b/src/components/Installations/Installations.css
@@ -50,7 +50,7 @@
 }
 .back-to-top {
     margin-left: 90%;
-    bottom: 80px;
+    bottom: 15%;
     text-align: center;
     color: black;
     border-radius: 100%;
