Media fetching from Drive

--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -72,7 +72,7 @@
     transition: ease-in 300ms;
 }
 .about-fullbox {
-    background-image: url('https://firebasestorage.googleapis.com/v0/b/excel-b7752.appspot.com/o/media%2Fothers%2Fabout.jpg?alt=media&token=211fe904-5f7c-4dc6-b160-02f9380b512e');
+    background-image: url('https://drive.google.com/uc?export=download&id=11JaQR2izQ0LbPvPZNg1XaVIjP3hxaBVh');
     padding-bottom : 11%;
     background-position: center center;
     background-repeat: no-repeat;
