--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -2,7 +2,7 @@
 
 
 .full-box {
-    background-image: url('https://firebasestorage.googleapis.com/v0/b/excel-b7752.appspot.com/o/media%2Fothers%2Fcontact.jpg?alt=media&token=eccb179b-22d3-43bf-86ba-c7b9c364088a');
+    background-image: url('https://drive.google.com/uc?export=download&id=1qASbGA6exm00-zUUIpZAmEJAyD7L4BUl');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
