--- a/src/components/Installations/Installations.css
+++ b/src/components/Installations/Installations.css
@@ -2,7 +2,7 @@
 
 .install-fullbox {
  font-family: 'Montserrat', sans-serif;
- background-image: url('https://firebasestorage.googleapis.com/v0/b/excel-b7752.appspot.com/o/media%2Fothers%2Fwood.jpg?alt=media&token=7d0b3e23-bd7c-4634-a3c7-28ac1d8bc21d');
+ background-image: url('https://drive.google.com/uc?export=download&id=1sA-jMtB8j03RGXqMUKa-r6rM6OXmkC79');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
