--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body::-webkit-scrollbar-thumb{
   height : 9%;
   top : 0;
   z-index: 1;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 59, 0.8);
   justify-content: center;
   
 }
@@ -46,7 +46,7 @@ body::-webkit-scrollbar-thumb{
 }
 @media screen and (max-width: 1024px) {
   #basic-navbar-nav{
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,59,0.8);
   }
 }
 
@@ -251,7 +251,7 @@ header {
   }
   .small-review {
     display: inline-block;
-    background-color: rgba(0,0,0,1);
+    background: linear-gradient(90deg, rgb(0, 0, 148), rgb(0, 0, 59));
   }
 }
 .partnerimg_small{
@@ -270,9 +270,11 @@ header {
     align-content: center;
   }
 }
-.carousel {
-  
-  background-color: rgb(0, 0, 0);
+.carousel { 
+  background: linear-gradient(90deg, rgb(0, 0, 150), rgb(0, 0, 59));
+}
+.clienoverlay-full {
+  background: linear-gradient(90deg, rgb(0, 0, 200), rgb(0, 0, 59));
 }
 
 .carouselcaption {
@@ -288,9 +290,7 @@ header {
   background-color: rgba(224, 217, 217, 0.7);
   
 }
-.clients-bg {
-  background-color: black;
-}
+
 .more-btn {
   color: white;
 }
