--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,10 +4,10 @@
 
 .footer-box {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgba(0,0,0, 1);
+    background: linear-gradient(90deg, rgb(0, 0, 50), rgb(0, 0, 59));
 }
 .footer-link {
-    color: lightgray;
+    color: rgb(255, 255, 255);
     margin-bottom: 10px;
     font-weight: 600;
     font-size: 16px;
@@ -67,7 +67,7 @@
 }
 
 .hr-footer-line {
-    background-color: floralwhite;
+    background-color: rgb(255, 255, 255);
 
 }
 .connect {
@@ -78,7 +78,7 @@
     text-align: center;
 }
 .address {
-    color: darkgray;
+    color: rgb(255, 255, 255);
     margin-top: 30px;
     transition: ease-in 500ms;
     text-align: center;
