--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -14,7 +14,7 @@
 }
 .foverlay:hover{
     transition: all ease-out 600ms;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(23, 23, 71, 1);
     border-radius : 20px;
     text-transform: uppercase;
 }
@@ -59,7 +59,7 @@
 @media screen and (max-width : 1024px){
     .foverlay{
         transition: all ease-out 600ms;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(23, 23, 71, 1);
         border-radius : 20px;
         text-transform: uppercase;
         color : white;
@@ -90,4 +90,10 @@
 }
 .inner {
     text-align: center;
+}
+.bloom-image:hover {
+    transform: scale(1.05);
+    box-shadow: 0px 2px 10px #00000075;
+    transition: ease-in 500ms;
+    border-radius: 15px;
 }
